refactor: use MapStruct